Separação dos perfis no time: jr, sr, esp

--- a/Alocação_de_Pessoas_em_Trabalho_Remoto_Scheduling_Problem.ipynb
+++ b/Alocação_de_Pessoas_em_Trabalho_Remoto_Scheduling_Problem.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": 85,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -34,52 +34,47 @@
       "outputs": [],
       "source": [
         "#notations\n",
-        "n     = 20  #number of days\n",
-        "#tAJr  = 5  #number of junior analysts\n",
-        "#tASr  = 1  #number of senior analysts\n",
-        "#tE    = 1  #humber of specialists\n",
-        "#max_absence = int((tAJr + tASr + tE)*0.3) #max absence allowed in team\n",
-        "t     = 50 #number of employees\n",
-        "max_day_absence = math.floor(t*0.3) #max absence allowed in team\n",
+        "n     = 120  #number of days for planning (20 = 1 month)\n",
+        "tAJr  = 50  #number of junior analysts\n",
+        "tASr  = 20  #number of senior analysts\n",
+        "tE    = 10  #humber of specialists\n",
+        "max_day_absence = math.floor((tAJr + tASr + tE)*0.3) #max absence allowed in team (30%)\n",
         "\n",
         "#decision variables\n",
-        "var_L   = LpVariable.dicts(\"Absence\", (range(n), range(t)), 0, 1, \"Binary\")\n",
-        "var_E   = LpVariable.dicts(\"Remote\", (range(n), range(t)), 0, 1, \"Binary\")\n",
-        "#var_L   = LpVariable.dicts(\"Leave\", (range(n), range(tAJr + tASr + tE)), 0, 1, \"Binary\")\n",
-        "#var_E   = LpVariable.dicts(\"HomeEsp\", (range(n), range(tE)), 0, 1, \"Binary\")\n",
-        "#var_AJr = LpVariable.dicts(\"HomeAJr\", (range(n), range(tAJr)), 0, 1, \"Binary\")\n",
-        "#var_ASr = LpVariable.dicts(\"HomeASr\", (range(n), range(tASr)), 0, 1, \"Binary\")\n",
+        "var_LAJr = LpVariable.dicts(\"AbsenceAJr\", (range(n), range(tAJr)), 0, 1, \"Binary\")\n",
+        "var_LASr = LpVariable.dicts(\"AbsenceASr\", (range(n), range(tASr)), 0, 1, \"Binary\")\n",
+        "var_LE   = LpVariable.dicts(\"AbsenceEsp\", (range(n), range(tE)), 0, 1, \"Binary\")\n",
+        "\n",
+        "var_AJr = LpVariable.dicts(\"RemoteAJr\", (range(n), range(tAJr)), 0, 1, \"Binary\")\n",
+        "var_ASr = LpVariable.dicts(\"RemoteASr\", (range(n), range(tASr)), 0, 1, \"Binary\")\n",
+        "var_E   = LpVariable.dicts(\"RemoteEsp\", (range(n), range(tE)), 0, 1, \"Binary\")\n",
         "\n",
         "#objective function\n",
         "obj = None\n",
         "for i in range(n):\n",
-        "  for j in range(t):\n",
-        "    obj += var_E[i][j] #+ var_L[i][j]\n",
-        "\n",
-        "#for i in range(n):\n",
-        "#  for j in range(tE):\n",
-        "#    obj += var_E[i][j]\n",
-        "#    for jj in range(tAJr):\n",
-        "#      obj += var_AJr[i][jj]\n",
-        "#      for jjj in range(tASr):\n",
-        "#        obj += var_ASr[i][jjj]\n",
+        "  for j in range(tE):\n",
+        "    obj += var_E[i][j]\n",
+        "    for jj in range(tAJr):\n",
+        "      obj += var_AJr[i][jj]\n",
+        "      for jjj in range(tASr):\n",
+        "        obj += var_ASr[i][jjj]\n",
         "\n",
         "problem = LpProblem(\"Schedule\", LpMaximize)\n",
-        "problem += obj\n"
+        "problem += obj"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 86,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "15"
+              "24"
             ]
           },
-          "execution_count": 159,
+          "execution_count": 86,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -90,64 +85,113 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 87,
       "metadata": {},
       "outputs": [],
       "source": [
         "#constraint 0\n",
         "#absences configuration\n",
         "\n",
-        "#funci 5, 0-5 dias de férias\n",
+        "#funci AJr 1, 0-5 dias de férias\n",
         "for i in range(0,5):\n",
-        "  problem += var_L[i][5] == 1\n",
+        "  problem += var_LAJr[i][1] == 1\n",
         "\n",
-        "#funci 3, 5-15 dias de férias\n",
+        "#funci ASr 0, 5-15 dias de férias\n",
         "for i in range(5,15):\n",
-        "  problem += var_L[i][3] == 1\n",
+        "  problem += var_LASr[i][0] == 1\n",
         "\n",
-        "#funci 7, 3 dias de abono\n",
+        "#funci Esp 1, 3 dias de abono\n",
         "for i in range(17,19):\n",
-        "  problem += var_L[i][7] == 1\n",
+        "  problem += var_LE[i][1] == 1\n",
         "\n",
-        "#funci 8, 2 dias de abono\n",
+        "#funci ASr 1, 2 dias de abono\n",
         "for i in range(4,6):\n",
-        "  problem += var_L[i][8] == 1\n"
+        "  problem += var_LASr[i][1] == 1\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 88,
       "metadata": {},
       "outputs": [],
       "source": [
         "#constraint 1\n",
         "#cada funcionário poderá estar trabalhando remoto (1), trabalhando no escritório (0) ou ausente (1), de forma excludente. \n",
+        "\n",
         "c = None\n",
+        "\n",
         "for i in range(n):\n",
-        "  for j in range(t):\n",
-        "    c = lpSum(var_E[i][j] + var_L[i][j]) <= 1\n",
-        "    problem += c  \n",
-        "        \n",
+        "  \n",
+        "  for j in range(tAJr):\n",
+        "    c = lpSum(var_AJr[i][j] + var_LAJr[i][j]) <= 1\n",
+        "    problem += c\n",
+        "    \n",
+        "  for jj in range(tASr):\n",
+        "    c = lpSum(var_ASr[i][jj] + var_LASr[i][jj]) <= 1\n",
+        "    problem += c\n",
+        "      \n",
+        "  for jjj in range(tE):\n",
+        "    c = lpSum(var_E[i][jjj] + var_LE[i][jjj]) <= 1\n",
+        "    problem += c \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 89,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "#constraint 2 \n",
         "#cada funcionário poderá ser alocado no máximo 8 dias em home-office no mês. \n",
-        "for j in range(t):\n",
+        "for j in range(tAJr):\n",
+        "  c = None\n",
+        "  for i in range(n):\n",
+        "    c += var_AJr[i][j]\n",
+        "  problem += c <=8\n",
+        "\n",
+        "for j in range(tASr):\n",
+        "  c = None\n",
+        "  for i in range(n):\n",
+        "    c += var_ASr[i][j]\n",
+        "  problem += c <=8\n",
+        "\n",
+        "for j in range(tE):\n",
         "  c = None\n",
         "  for i in range(n):\n",
         "    c += var_E[i][j]\n",
-        "  problem += c <=8\n",
-        "\n",
+        "  problem += c <=8\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 90,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "#constraint 3\n",
         "#a quantidade máxima de ausências do escritório em um dia deve ser no máximo 30% do total de funcionários da equipe. \n",
         "c = None\n",
         "for i in range(n):\n",
-        "  for j in range(t):\n",
-        "    c += var_E[i][j] + var_L[i][j]\n",
+        "  for j in range(tAJr):\n",
+        "    c += var_AJr[i][j] + var_LAJr[i][j]\n",
+        "problem += (c <= max_day_absence*n)\n",
+        "\n",
+        "c = None\n",
+        "for i in range(n):\n",
+        "  for j in range(tASr):\n",
+        "    c += var_ASr[i][j] + var_LASr[i][j]\n",
+        "problem += (c <= max_day_absence*n)\n",
+        "\n",
+        "c = None\n",
+        "for i in range(n):\n",
+        "  for j in range(tE):\n",
+        "    c += var_E[i][j] + var_LE[i][j]\n",
         "problem += (c <= max_day_absence*n)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 91,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -157,17 +201,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 92,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Solution Time: 0.07715296745300293\n",
-            "Solution CPU Time: 0.07800000000133878\n",
+            "Solution Time: 0.5555694103240967\n",
+            "Solution CPU Time: 0.5630000000091968\n",
             "Status: 1, Optimal\n",
-            "Objective: 281.0\n"
+            "Objective: 84080.0\n"
           ]
         }
       ],
